--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,6 +13,7 @@ jobs:
     runs-on: ${{ matrix.os }}
 
     strategy:
+      fail-fast: false  # This allows all matrix jobs to complete even if one fails
       matrix:
         os: [macos-latest, windows-latest]
         python-version: ["3.10"]
@@ -29,27 +30,49 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
+    - name: Cache pip packages
+      uses: actions/cache@v3
+      with:
+        path: ~/.cache/pip
+        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+        restore-keys: |
+          ${{ runner.os }}-pip-
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         python -m pip install build pytest
       shell: bash
 
-    - name: Install CMake (if needed)
-      if: runner.os == 'macOS' || runner.os == 'Windows'
+    - name: Install CMake (macOS)
+      if: runner.os == 'macOS'
       run: |
-        if [[ "$RUNNER_OS" == "Windows" ]]; then
-          choco install cmake --installargs 'ADD_CMAKE_TO_PATH=System' || exit 1
-        elif [[ "$RUNNER_OS" == "macOS" ]]; then
-          brew install cmake
-        fi
+        brew install cmake
       shell: bash
+
+    - name: Install CMake (Windows)
+      if: runner.os == 'Windows'
+      run: |
+        choco install cmake --installargs 'ADD_CMAKE_TO_PATH=System'
+      shell: bash
+
+    - name: Setup MinGW (Windows)
+      if: runner.os == 'Windows'
+      uses: msys2/setup-msys2@v2
+      with:
+        msystem: MINGW64
+        update: true
+        install: >-
+          mingw-w64-x86_64-gcc
+          mingw-w64-x86_64-cmake
+          mingw-w64-x86_64-make
 
     - name: Build DLL (Windows)
       if: runner.os == 'Windows'
+      shell: msys2 {0}
       run: |
+        CMAKE_ARGS="-DCMAKE_CXX_FLAGS=-fopenmp"
         python -m pip install -e .
-      shell: bash
 
     - name: Build (macOS)
       if: runner.os == 'macOS'
