Pass n_gpu_layers and turn off Metal for bark.cpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -149,7 +149,7 @@ if(BARK_BUILD)
             -DCMAKE_POSITION_INDEPENDENT_CODE=ON
             -DCMAKE_CXX_STANDARD=17
             -DGGML_CUDA=${GGML_CUDA}
-            -DGGML_METAL=${GGML_METAL}
+            -DGGML_METAL=OFF
             -DBUILD_SHARED_LIBS=ON
             -DBARK_BUILD_EXAMPLES=OFF
         BUILD_ALWAYS 1
