--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -135,6 +135,8 @@ if(STABLE_DIFFUSION_BUILD)
             -DBUILD_SHARED_LIBS=ON
             -DSD_METAL=${GGML_METAL}
             -DSD_CUBLAS=${GGML_CUDA}
+            -DSD_HIPBLAS=${GGML_HIPBLAS}
+            -DSD_VULKAN=${GGML_VULKAN}
         BUILD_ALWAYS 1
         BUILD_COMMAND ${CMAKE_COMMAND} --build . --config Release -- ${MSBUILD_ARGS}
         INSTALL_COMMAND ${CMAKE_COMMAND} --build . --config Release --target install
@@ -146,6 +148,8 @@ option(LLAMA_BUILD "Build llama.cpp" ON)
 if(LLAMA_BUILD)
     set(LLAMA_CUDA ${GGML_CUDA})
     set(LLAMA_METAL ${GGML_METAL})
+    set(LLAMA_HIPBLAS ${GGML_HIPBLAS})
+    set(LLAMA_VULKAN ${GGML_VULKAN})
 
     if(WIN32)
         # Add Windows-specific definitions and flags for llama.cpp
@@ -171,6 +175,8 @@ if(LLAMA_BUILD)
             -DBUILD_SHARED_LIBS=ON
             -DLLAMA_CUDA=${LLAMA_CUDA}
             -DLLAMA_METAL=${LLAMA_METAL}
+            -DLLAMA_HIPBLAS=${LLAMA_HIPBLAS}
+            -DLLAMA_VULKAN=${LLAMA_VULKAN}
             -DCMAKE_C_FLAGS=${OpenMP_C_FLAGS}
             -DCMAKE_CXX_FLAGS=${OpenMP_CXX_FLAGS}
             -DCMAKE_EXE_LINKER_FLAGS=${OpenMP_EXE_LINKER_FLAGS}
@@ -188,6 +194,10 @@ endif()
 # bark_cpp project
 option(BARK_BUILD "Build bark.cpp" ON)
 if(BARK_BUILD)
+    # Filter out HIPBLAS and Vulkan options for bark.cpp since it doesn't support them
+    set(BARK_CMAKE_OPTIONS ${USER_DEFINED_OPTIONS})
+    list(FILTER BARK_CMAKE_OPTIONS EXCLUDE REGEX "GGML_HIPBLAS|GGML_VULKAN")
+    
     ExternalProject_Add(bark_project
         SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/dependency/bark.cpp
         BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR}/bark_build
