--- a/android/llama.android/app-java/build.gradle
+++ b/android/llama.android/app-java/build.gradle
@@ -47,5 +47,6 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.16.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.16.0'
 
-    implementation project(":llama")
+   implementation project(":llama")
+    // implementation files("libs/com.nexa.aar")
 }
