display version tag in github vulkan release page

--- a/.github/workflows/build-wheels-vulkan-win.yaml
+++ b/.github/workflows/build-wheels-vulkan-win.yaml
@@ -88,6 +88,6 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           files: dist/*
-          tag_name: ${{ github.ref_name }}-vulkan${{ env.VULKAN_VERSION }}
+          tag_name: ${{ github.ref_name }}-vulkan
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
