--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "pydantic",
     "pillow",
     "huggingface_hub",
+    "modelscope",
     "prompt_toolkit",
     "tqdm",                     # Shared dependencies
     "tabulate",
