upgrade llama cpp python

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,8 @@
 cmake_minimum_required(VERSION 3.16)
 project(nexa_gguf)
+if(MSVC)
+    add_compile_options(/utf-8)
+endif()
 
 include(ExternalProject)
 
