--- a/pyproject.toml
+++ b/pyproject.toml
@@ -131,7 +131,7 @@ cmake.args = [
     "-DCMAKE_BUILD_PARALLEL_LEVEL=16",
     "-DSTABLE_DIFFUSION_BUILD=ON",
     "-DLLAMA_BUILD=ON",
-    "-DBARK_BUILD=ON",
+    "-DBARK_BUILD=OFF",
     "-DBUILD_SHARED_LIBS=ON",
     "-DLLAMA_BUILD_TESTS=OFF"
 ]
