--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -40,17 +40,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install build pytest
-      shell: bash
-
-    - name: Install CMake (if needed)
-      if: runner.os == 'macOS' || runner.os == 'Windows'
-      run: |
-        if [[ "$RUNNER_OS" == "Windows" ]]; then
-          choco install cmake --installargs 'ADD_CMAKE_TO_PATH=System' || exit 1
-        elif [[ "$RUNNER_OS" == "macOS" ]]; then
-          brew install cmake
-        fi
+        python -m pip install build pytest wheel setuptools scikit-build-core
       shell: bash
 
     - name: Build DLL (Windows)
