Re-added unidic-lite dependency.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,8 +37,8 @@ dependencies = [
     "uroman",
     "scipy",
     "inflect",
-    "sounddevice"
-    
+    "sounddevice",
+    "unidic-lite"
 ]
 classifiers = [
     "Programming Language :: Python :: 3",
