Moved OuteTTS dependencies to optional sections, Updated CICD pipeline for installing dependencies.

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -41,6 +41,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install build pytest wheel setuptools scikit-build-core
+        python -m pip install -r requirements.txt
       shell: bash
 
     - name: Build DLL (Windows)
