--- a/.github/workflows/build-wheels-cpu.yaml
+++ b/.github/workflows/build-wheels-cpu.yaml
@@ -100,6 +100,9 @@ jobs:
         with:
           submodules: "recursive"
 
+      - name: Check nproc value
+        run: echo "Number of processors: $(nproc)"
+
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
         with:
@@ -113,7 +116,7 @@ jobs:
           CIBW_SKIP: "*musllinux* pp*"
           CIBW_ARCHS: "aarch64"
           CIBW_BUILD: "cp37-* cp38-* cp39-* cp310-* cp311-* cp312-* cp313-*"
-          CMAKE_BUILD_PARALLEL_LEVEL: $(nproc)
+          CMAKE_BUILD_PARALLEL_LEVEL: 4
         with:
           output-dir: wheelhouse
 
