--- a/.github/workflows/build-wheels-cpu.yaml
+++ b/.github/workflows/build-wheels-cpu.yaml
@@ -98,7 +98,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          submodules: "recursive"    
+          submodules: "recursive"
 
       # - name: Set up QEMU
       #   uses: docker/setup-qemu-action@v3
@@ -116,7 +116,7 @@ jobs:
           CIBW_SKIP: "*musllinux* pp*"
           CIBW_ARCHS: "aarch64"
           CIBW_BUILD: "cp37-* cp38-* cp39-* cp310-* cp311-* cp312-* cp313-*"
-          CMAKE_BUILD_PARALLEL_LEVEL: 4
+          CMAKE_BUILD_PARALLEL_LEVEL: $(nproc)
         with:
           output-dir: wheelhouse
 
