--- a/.github/workflows/build-wheels-cuda-linux.yaml
+++ b/.github/workflows/build-wheels-cuda-linux.yaml
@@ -58,13 +58,12 @@ jobs:
           python-version: ${{ matrix.pyver }}
           cache: "pip"
 
-      - name: Setup Mamba
+      - name: Setup Miniconda
         uses: conda-incubator/setup-miniconda@v3.0.4
         with:
           activate-environment: "build"
           python-version: ${{ matrix.pyver }}
-          miniforge-variant: Mambaforge
-          miniforge-version: 23.11.0-0
+          miniconda-version: "latest"
           use-mamba: true
           add-pip-as-python-dependency: true
           auto-activate-base: false
