update openmp not found handling

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,7 +26,13 @@ elseif(APPLE)
     endif()
 else()
     # Linux and other Unix systems
-    find_package(OpenMP REQUIRED)
+    find_package(OpenMP QUIET)
+    if(NOT OpenMP_FOUND)
+        message(STATUS "OpenMP not found - OpenMP support will be disabled")
+        set(OpenMP_C_FLAGS "")
+        set(OpenMP_CXX_FLAGS "")
+        set(OpenMP_EXE_LINKER_FLAGS "")
+    endif()
 endif()
 
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
