--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,12 @@
 cmake_minimum_required(VERSION 3.16)
 project(nexa_gguf)
 
+message(STATUS "CMAKE_ARGS Check:")
+message(STATUS "  GGML_SYCL: ${GGML_SYCL}")
+message(STATUS "  CMAKE_C_COMPILER: ${CMAKE_C_COMPILER}")
+message(STATUS "  CMAKE_CXX_COMPILER: ${CMAKE_CXX_COMPILER}")
+message(STATUS "  CMAKE_BUILD_TYPE: ${CMAKE_BUILD_TYPE}")
+
 include(ExternalProject)
 
 # Platform-specific settings
